test-suite/typecheck/pass/let_typed.first
function f() -> Int {
  let x: Int = 10;
  let y: Int = 20;
  return x + y;
}
