test-suite/typecheck/fail/type_mismatch_assign.first
function f() -> Unit {
  let x: Int = "hello";
  return;
}
